--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,4 @@
 body {
   margin: 0;
-  font-family: Roboto, sans-serif;
-}
-html {
-  font-family: "Rajdhani", sans-serif;
+  font-family: "Oxanium", sans-serif;
 }
